# biotune

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  chat.py  compose.yml  config.py  docker-compose.yml  llm_client.py  minio_api.py  models.py  models.yaml  prompts.json  pyproject.toml  rate_limiter.py  requirements.txt  service.py
backend/: README.md  chat.py  functions.py  prompts.json  requirements.txt  serve_llm.py  setup_llm.py  test_llm_local.py  test_llm_remote.py
backend/backup_backend/: README.md  requirements.txt  serve_llm.py  test_llm_local.py  test_llm_remote.py
conch_model/: README.md  classify_cancer.py  pyproject.toml  requirements.txt  service.py
conch_model/params/: cancer.json
conch_model/utils/: conch_utils.py  data.py
examples/: .env.docker.example
foundation/: pyproject.toml
frontend/: .gitignore  README.md
frontend/createxyz-project/src/: middleware.js
frontend/src/app/: layout.js  page.jsx
k8s/: .env.kube.example  cluster_issuer_example.yaml  cluster_role_admin.yaml  config_map.yaml.example  config_map_example.yaml  deployment.yaml  deployment.yaml.example  hpa.yaml  ingress-ngrok.yaml  ingress.yaml  knative-service.yaml.example  kompose.yaml.example  kompose.yml  ngrok-update-notes.txt  ngrok_ingress_setup.sh  sa.yaml  secret.yaml  secret.yaml.example  service.yaml  spec.json
medSAM_model/: README.md  segment_image.py  service.py
tests/: test_minio_and_api.py
virchow_model/: README.md  get_similar_image.py  requirements.txt  service.py
(+7 files in other folders)
