[project]
name = "foundation"
version = "0.1.0"
description = ""
authors = [
    {name = "Ellen Schrader",email = "mail@ellen-schrader.de"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers (>=4.48.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
